--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body {
     margin-right: 2%;
     display: flex;
     justify-content: space-evenly;
+    cursor: pointer;
 }
 
 .space
@@ -165,7 +166,8 @@ button{
     color: white;
     padding: 10px;
     border-radius: 20px;
-    background-color: rgb(75, 75, 240);
+    background-color: rgba(246, 6, 86, 0);
+    border: 1px solid white;
 }
 button:hover
 {
@@ -187,4 +189,7 @@ span
 {
     color: rgb(13, 13, 13);
     font-weight: bolder;
+}
+a{
+    text-decoration: none;
 }
